--- a/src/main/webapp/notes.html
+++ b/src/main/webapp/notes.html
@@ -69,24 +69,38 @@
 
     <div id="" class="mb-4">
         <div class="container mx-auto flex flex-wrap px-8">
-            <div
-                class="dpt w-full text-center mx-auto py-10 sm:w-96 rounded-md bg-sky-600 text-white my-5 mx-2 grow cursor-pointer">
-                <h1 class="text-4xl uppercase font-bold">JAVA</h1><br>
-                <a class="py-3 px-10 bg-rose-900 rounded-full hover:bg-rose-700">View
-                    Notes
-                </a>
-            </div>
-            <div
-                class="dpt w-full text-center mx-auto py-10 sm:w-96 rounded-md bg-sky-600 text-white my-5 mx-2 grow cursor-pointer">
-                <h1 class="text-4xl uppercase font-bold">PHP</h1><br>
-                <a class="py-3 px-10 bg-rose-900 rounded-full hover:bg-rose-700">V
+            <div class="dpt w-full text-center mx-auto pt-10 pb-3 sm:w-96 rounded-md text-white my-5 mx-2 grow cursor-pointer"
+                style="background-color: #34495E ;">
+                <h1 class="text-xl font-bold mb-1">Hello word</h1>
+                <p class="mb-4">java is good language nowadays</p>
+                <a class="py-3 px-10 bg-blue-600 rounded-full hover:bg-blue-700">View
                     Notes</a>
+                <div class="pt-5">
+                    <span class="float-left mx-3" style="color: #BDC3C7 ;">Prof Abc </span>
+                    <span class="float-right mx-3" style="color: #BDC3C7 ;">14-2-2023</span>
+                </div>
             </div>
-            <div
-                class="dpt w-full text-center mx-auto py-10 sm:w-96 rounded-md bg-sky-600 text-white my-5 mx-2 grow cursor-pointer">
-                <h1 class="text-4xl uppercase font-bold">DSA</h1><br>
-                <a class="py-3 px-10 bg-rose-900 rounded-full hover:bg-rose-700">View
+            <div class="dpt w-full text-center mx-auto pt-10 pb-3 sm:w-96 rounded-md text-white my-5 mx-2 grow cursor-pointer"
+                style="background-color: #34495E ;">
+                <h1 class="text-xl font-bold mb-1">Hello word</h1>
+                <p class="mb-4">java is good language nowadays</p>
+                <a class="py-3 px-10 bg-blue-600 rounded-full hover:bg-blue-700">View
                     Notes</a>
+                <div class="pt-5">
+                    <span class="float-left mx-3" style="color: #BDC3C7 ;">Prof Abc </span>
+                    <span class="float-right mx-3" style="color: #BDC3C7 ;">14-2-2023</span>
+                </div>
+            </div>
+            <div class="dpt w-full text-center mx-auto pt-10 pb-3 sm:w-96 rounded-md text-white my-5 mx-2 grow cursor-pointer"
+                style="background-color: #34495E ;">
+                <h1 class="text-xl font-bold mb-1">Hello word</h1>
+                <p class="mb-4">java is good language nowadays</p>
+                <a class="py-3 px-10 bg-blue-600 rounded-full hover:bg-blue-700">View
+                    Notes</a>
+                <div class="pt-5">
+                    <span class="float-left mx-3" style="color: #BDC3C7 ;">Prof Abc </span>
+                    <span class="float-right mx-3" style="color: #BDC3C7 ;">14-2-2023</span>
+                </div>
             </div>
 
         </div>
