--- a/src/main/webapp/teacherportal.html
+++ b/src/main/webapp/teacherportal.html
@@ -52,7 +52,7 @@
                     </div>
                     <div class="hidden sm:ml-6 sm:block">
                         <div class="flex space-x-4">
-                            <a href="index.html" class="bg-gray-900 text-white px-5 py-6 rounded-md text-sm font-medium"
+                            <a href="index.jsp" class="bg-gray-900 text-white px-5 py-6 rounded-md text-sm font-medium"
                                 aria-current="page">Home</a>
                         </div>
                     </div>
@@ -89,7 +89,7 @@
         <div class="sm:hidden" id="mobile-menu">
             <div class="space-y-1 px-2 pt-2 pb-3">
                 <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-                <a href="index.html" class="bg-gray-900 text-white block px-3 py-2 rounded-md text-base font-medium"
+                <a href="index.jsp" class="bg-gray-900 text-white block px-3 py-2 rounded-md text-base font-medium"
                     aria-current="page">Home</a>
             </div>
         </div>
